# data-science-from-scratch

./: README.md  pyproject.toml
Lessons/: CH1.ipynb  CH2.ipynb  CH3.ipynb
