[tool.poetry]
name = "data-science-from-scratch"
version = "0.1.0"
description = ""
authors = ["aryasaumitra <aryasaumitra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pydantic = "^2.9.1"
pandas = "^2.2.2"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
